# git-automation

./: Cargo.toml
src/: main.rs
