[package]
name = "git-automate"
version = "0.1.0"
edition = "2021"
description = "A powerful Git automation tool"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
names = "0.14.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
color-eyre = "0.6"
toml = "0.8"
anyhow = "1.0"
